# Mario-with-own-ECS-game-engine--SFML-2023

./: .gitignore  README.md
CPP-Game/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GameObject.hpp  ItalienQuiSaute.sln  ItalienQuiSaute.vcxproj  ItalienQuiSaute.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vcpkg.json
CPP-Game/ItalienQuiSaute/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AnimationsManager.hpp  AnimatorComponent.hpp  AudioComponent.hpp  AudioManager.hpp  CMakeCache.txt  CMakeLists.txt  CameraComponent.hpp  ColliderComponent.hpp  Component.hpp  Enemy.hpp  Entity.hpp  EntityHealthComponent.hpp  EntityManager.hpp  FileReader.hpp  Flag.hpp  GameManager.hpp  GameObject.hpp  GravityComponent.hpp  HealthComponent.hpp  InputManager.hpp  ItalienQuiSaute.cpp  ItalienQuiSaute.sln  ItalienQuiSaute.vcxproj  ItalienQuiSaute.vcxproj.filters  Map.txt  PlayerControllerComponent.hpp  PlayerEntity.hpp  PlayerStateComponent.hpp  SpriteRenderer.hpp  SpriteRendererComponent.hpp  Textures.hpp  TexturesManager.hpp  Transform.hpp  TransformComponent.hpp  cmake_install.cmake
CPP-Game/ItalienQuiSaute/API/: RequestManager.cpp  RequestManager.h  RequestManager.hpp
CPP-Game/ItalienQuiSaute/Engine/API/: RequestManager.hpp
CPP-Game/ItalienQuiSaute/Engine/Components/: AudioComponent.hpp  CameraComponent.hpp  ColliderComponent.hpp  Component.hpp  GravityComponent.hpp  HealthComponent.hpp  PlayerControllerComponent.hpp  PlayerStateComponent.hpp  SpriteRendererComponent.hpp  TransformComponent.hpp
CPP-Game/ItalienQuiSaute/Engine/Entities/: Background.hpp  Enemy.hpp  Entity.hpp  Flag.hpp  GameObject.hpp  PlayerEntity.hpp
CPP-Game/ItalienQuiSaute/Engine/System/Managers/: AnimationsManager.hpp  EntityManager.hpp  InputManager.hpp  TexturesManager.hpp
CPP-Game/ItalienQuiSaute/Game/: FileReader.hpp  GameManager.hpp  Level.hpp  Menu.hpp
CPP-Game/ItalienQuiSaute/Game/Assets/Resources/: MapPatern.txt
CPP-Game/ItalienQuiSaute/Game/Source/: Background.hpp  FileReader.hpp  GameManager.hpp  ItalienQuiSaute.cpp  Level.hpp  Menu.hpp
CPP-Game/ItalienQuiSaute/Maths/: Vector2.h
CPP-Game/ItalienQuiSaute/Plateform/: ItalienQuiSaute.vcxproj  ItalienQuiSaute.vcxproj.filters
